Added footer and links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <body>
     <h1>Welcome to the Dementia Activity Generator</h1>
 
+
+    <footer>
+      This was coded by Jeanine DeBerry and is <a href="https://github.com/jkdeberry/dementia-activity-generator" target="_blank"> open-sourced on Github.</a>
+    </footer>
+
     <script src="src/index.js"></script>
   </body>
 </html>
