--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 
     <footer>
-      This was coded by Jeanine DeBerry and is <a href="https://github.com/jkdeberry/dementia-activity-generator" target="_blank"> open-sourced on Github.</a>
+      This AI project was coded by 
+      <a href="https://github.com/jkdeberry" target="_blank">Jeanine DeBerry</a> and is 
+      <a href="https://github.com/jkdeberry/dementia-activity-generator" target="_blank">open-sourced on Github</a> and is <a href="https://dementia-activity-generator.netlify.app/" target="_blank">hosted on Netlify.</a>
     </footer>
 
     <script src="src/index.js"></script>
