--- a/index.html
+++ b/index.html
@@ -4,16 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css">
-    <title>Dementia Activity Generator</title>
+    <title>AI Dementia Activity Generator</title>
   </head>
   <body>
-    <h1>Welcome to the Dementia Activity Generator</h1>
+    <header>
+    
+    <h1>AI Dementia Activity Generator</h1>
+  </header>
 
+  <main>
+    <form>
+      <input type="text" placeholder="Enter the type of activity"
+      autofocus
+      required
+      autocomplete="off"
+      />
+      <input type="submit" />
+    </form>
+    <div>
+      Look through old pictures
+      <br />
+      Work some type of puzzle
+      <br />
+      Cuddle a pet
+    </div>
+
+  </main>
 
     <footer>
       This AI project was coded by 
       <a href="https://github.com/jkdeberry" target="_blank">Jeanine DeBerry</a> and is 
-      <a href="https://github.com/jkdeberry/dementia-activity-generator" target="_blank">open-sourced on Github</a> and is <a href="https://dementia-activity-generator.netlify.app/" target="_blank">hosted on Netlify.</a>
+      <a href="https://github.com/jkdeberry/dementia-activity-generator" target="_blank">open-sourced on Github</a> and is 
+      <a href="https://dementia-activity-generator.netlify.app" target="_blank">hosted on Netlify.</a>
     </footer>
 
     <script src="src/index.js"></script>
