Added styling and  update html

--- a/index.html
+++ b/index.html
@@ -7,43 +7,37 @@
     <title>AI Dementia Activity Generator</title>
   </head>
   <body>
-    <header>
-    
-    <h1>AI Dementia Activity Generator</h1>
-    </header>
+      <div class="container">
+        <header>
+          <h1>AI Dementia Activity Generator</h1>
+        </header>
 
-  <main>
-    <form>
-      <input type="text" placeholder="Enter the type of activity"
-      autofocus
-      required
-      autocomplete="off"
-      />
-      <input type="submit" />
-    </form>
-    <div>
-      Look through old pictures
-      <br />
-      Work some type of puzzle
-      <br />
-      Cuddle a pet
-    </div>
+        <main>
+          <form>
+            <input type="text" placeholder="Enter the type of activity"
+              autofocus
+              required
+              autocomplete="off"
+              class="instructions"
+            />
+            <input type="submit" class="submit-button" />
+          </form>
+          <div class="activity">
+            Look through old pictures
+            <br />
+            Work some type of puzzle
+            <br />
+            Cuddle a pet
+          </div>
+        </main>
 
-  </main>
-
-
-
-
-
-
-
-  
-    <footer>
-      This AI project was coded by 
-      <a href="https://github.com/jkdeberry" target="_blank">Jeanine DeBerry</a> and is 
-      <a href="https://github.com/jkdeberry/dementia-activity-generator" target="_blank">open-sourced on Github</a> and is 
-      <a href="https://dementia-activity-generator.netlify.app" target="_blank">hosted on Netlify.</a>
-    </footer>
+        <footer>
+          This AI project was coded by 
+          <a href="https://github.com/jkdeberry" target="_blank">Jeanine DeBerry</a> and is 
+          <a href="https://github.com/jkdeberry/dementia-activity-generator" target="_blank">open-sourced on Github</a> and is 
+          <a href="https://dementia-activity-generator.netlify.app" target="_blank">hosted on Netlify.</a>
+        </footer>
+      </div>
 
     <script src="src/index.js"></script>
   </body>
