--- a/index.html
+++ b/index.html
@@ -15,17 +15,20 @@
         </header>
 
         <main>
-          <form id="activity-generator-form">
-            <input type="text" placeholder="Enter the type of activity"
+          <div class="form-container">
+          <form id="activity-generator-form"> 
+            <input type="text" placeholder="What form of activity are you considering?"
               autofocus
               required
               autocomplete="off"
               class="instructions"
               id="user-instructions"
             />
-            <input type="submit" class="submit-button" />
+            <input type="submit" class="submit-button" /> 
           </form>
-          <div class="activity" id="activity"></div>
+          <div class="hint">i.e.: Reading, Colors or Pets</div>
+          </div>
+          <div class="activity hidden" id="activity"></div>
         </main>
 
         <footer>
