Changed my instruction line

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <main>
           <div class="form-container">
           <form id="activity-generator-form"> 
-            <input type="text" placeholder="What form of activity are you considering?"
+            <input type="text" placeholder="What subject do you prefer for an activity?"
               autofocus
               required
               autocomplete="off"
@@ -26,7 +26,7 @@
             />
             <input type="submit" class="submit-button" /> 
           </form>
-          <div class="hint">i.e.: Reading, Colors or Pets</div>
+          <div class="hint">i.e.: Reading, Colors, Pets, etc.</div>
           </div>
           <div class="activity hidden" id="activity"></div>
         </main>
